[package]
repository = "https://github.com/SuperInstance/fleet-dedup"
name = "fleet-dedup"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"
description = "Detect duplicate and near-duplicate repos in a fleet"

[[bin]]
name = "fleet-dedup"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
walkdir = "2"
hex = "0.4"
rayon = "1.10"
anyhow = "1.0.102"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
